# klaxon

./: .env.example  .gitignore  AI_USAGE.md  FEEDBACK.md  PLAN.md  README.md  demo.html  pyproject.toml
.github/workflows/: pages.yml
agents/: .keep  agent.py  aggregator.py  analyzer_oracle.py  axl_client.py  build_manifests.py  finding.py  keeperhub.py  og_compute.py  requirements.txt  run_agent.py  smoke_test_axl.py  test_aggregator.py  test_analyzer_oracle.py  test_finding.py  test_guardian_integration.py  test_keeperhub_live.py  test_og_compute.py
axl/: .keep  README.md  agent-roster.json  node-a-config.json  node-b-config.json  node-c-config.json
contracts/: .env.example  .keep  foundry.toml
contracts/deployments/: 16602.json  84532.json
contracts/script/: Attacker.s.sol  Deploy.s.sol
contracts/src/: AgentINFT.sol  Guardian.sol  ManipulableOracle.sol  MockERC20.sol  VulnerableLendingPool.sol
contracts/test/: Exploit.t.sol  Guardian.t.sol
dashboard/: .keep
docs/diagrams/: architecture.excalidraw
docs/submissions/: .keep  0g.md  gensyn.md  keeperhub.md  (+1 more)
keeperhub/: create-workflow.py  update-workflow.py  workflow.json
klaxon/: __init__.py  _paths.py  cli.py
manifests/: agent-a.json  agent-b.json  agent-c.json  manifests.json
og-compute/: README.md  acknowledge.ts  deposit.ts  list-providers.ts  package-lock.json  package.json  summarize-finding.ts  test-inference.ts  tsconfig.json
og-storage/: package-lock.json  package.json  tsconfig.json  upload-manifest.ts
site/: index.html  script.js  styles.css
specs/: architecture.md
(+6 files in other folders)
